made some changes to fix bugs on mobile

--- a/public/style.css
+++ b/public/style.css
@@ -451,6 +451,8 @@ button:hover {
 /* WALLET CONTAINER */
 #wallet-container {
     display: none;
+    padding-bottom: 16px;
+    overflow-x: scroll;
 }
 #wallet-container section:first-of-type {
     margin-top: 0;
@@ -483,6 +485,8 @@ button:hover {
 
 /* TRANSACTION DISPLAY CONTAINER */
 #transaction-container {
+    overflow-x: scroll;
+    padding-bottom: 16px;
     display: none;
 }
 #secret-form {
